# cuttlefish

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  README.md  index.html  mkdocs.yml
data/: Datasets.md  cycles.fa  reads.fq  refs1.fa  refs1.lst  refs2.fa  refs2.lst  rob-palindrome.fa  rob-palindrome.lst  ust-example.fa  ust-example.lst
docs/: index.md
include/: Annotated_Kmer.hpp  Application.hpp  Async_Logger_Wrapper.hpp  Binary_File_Iterator.hpp  Build_Params.hpp  CdBG.hpp  CdBG_Builder.hpp  Character_Buffer.hpp  Codec_Stream.hpp  Compressed_Stream.hpp  DNA.hpp  DNA_Base.hpp  DNA_Base_Utility.hpp  DNA_Utility.hpp  Data_Logistics.hpp  Directed_Kmer.hpp  Directed_Vertex.hpp  Edge.hpp  Endpoint.hpp  FASTA_Record.hpp  File_Extensions.hpp  Input_Defaults.hpp  Job_Queue.hpp  Kmer.hpp  Kmer_Buffered_Iterator.hpp  Kmer_Container.hpp  Kmer_HashTable.hpp  Kmer_Hash_Entry_API.hpp  Kmer_Hash_Table.hpp  Kmer_Hasher.hpp  Kmer_Iterator.hpp  Kmer_SPMC_Iterator.hpp  Kmer_Str.hpp  Kmer_Utility.hpp  Kmer_u64.hpp  Maximal_Unitig_Scratch.hpp  Minimizer_Policy.hpp  Oriented_Unitig.hpp  Output_Format.hpp  Output_Sink.hpp  (+29 more)
include/BBHash/: BooPHF.h  LICENSE
include/FastPFor/: VarIntG8IU.h  bitpacking.h  bitpackingaligned.h  bitpackinghelpers.h  bitpackingunaligned.h  blockpacking.h  codecfactory.h  codecs.h  compositecodec.h  cpubenchmark.h  csv.h  deltautil.h  entropy.h  externalvector.h  fastpfor.h  maropuparser.h  memutil.h  mersenne.h  newpfor.h  optpfor.h  packingvectors.h  pfor.h  pfor2008.h  rolledbitpacking.h  simdbinarypacking.h  simdbitpacking.h  simdfastpfor.h  simdgroupsimple.h  simdnewpfor.h  simdoptpfor.h  simdpfor.h  simdvariablebyte.h  simple16.h  simple8b.h  simple8b_rle.h  simple9.h  simple9_rle.h  snappydelta.h  streamvariablebyte.h  stringutil.h  (+7 more)
include/boost/preprocessor/: cat.hpp
include/boost/preprocessor/control/: iif.hpp
include/boost/preprocessor/debug/: error.hpp
include/boost/preprocessor/detail/: auto_rec.hpp
include/boost/preprocessor/detail/dmc/: auto_rec.hpp
include/boost/preprocessor/repetition/: repeat.hpp
include/boost/preprocessor/tuple/: eat.hpp
include/compact_vector/: LICENSE  compact_iterator.hpp  compact_vector.hpp  const_iterator_traits.hpp  parallel_iterator_traits.hpp  prefetch_iterator_traits.hpp
include/kmc_api/: Virtual_Prefix_File.hpp  kmc_file.h  kmer_api.h  kmer_defs.h
include/kseq/: kseq.h
include/lz4_stream/: lz4_stream.h
include/mio/: mio.hpp
include/spdlog/: tweakme.h
include/xxHash/: xxh3.h
include/zstr/: zstr.hpp  zstr_make_unique_polyfill.h
javascript/: mathjax.js
patches/: kmc-v3.2.1_cuttlefish-dev.diff  kmc_patch.diff  kmc_v3.2.2.patch
search/: search_index.json
src/: Application.cpp  Async_Logger_Wrapper.cpp  Build_Params.cpp  CMakeLists.txt  CdBG.cpp  CdBG_Builder.cpp  CdBG_GFA_Reduced_Writer.cpp  CdBG_GFA_Writer.cpp  CdBG_Plain_Writer.cpp  CdBG_Writer.cpp  Character_Buffer_Flusher.cpp  DNA_Base_Utility.cpp  DNA_Utility.cpp  Data_Logistics.cpp  Detached_Cycles_Extractor.cpp  Kmer.cpp  Kmer_Container.cpp  Kmer_HashTable.cpp  Kmer_Hash_Table.cpp  Kmer_Iterator.cpp  Kmer_Str.cpp  Kmer_Utility.cpp  Kmer_u64.cpp  Kmers_Validator.cpp  Maximal_Unitig_Scratch.cpp  Minimizer_Policy.cpp  Parser.cpp  Progress_Tracker.cpp  Read_CdBG.cpp  Read_CdBG_Constructor.cpp  Read_CdBG_Extractor.cpp  Ref_Parser.cpp  Seq_Input.cpp  Sequence_Validator.cpp  State.cpp  State_Read_Space.cpp  Thread_Pool.cpp  Unipaths_Meta_info.cpp  Unitig_Scratch.cpp  Validator.cpp  (+11 more)
src/FastPFor/: benchbitpacking.cpp  bitpacking.cpp  bitpackingaligned.cpp  bitpackingunaligned.cpp  codecs.cpp  csv2maropu.cpp  entropy.cpp  gapstats.cpp  horizontalbitpacking.cpp  inmemorybenchmark.cpp  partitionbylength.cpp  simdbitpacking.cpp  simdunalignedbitpacking.cpp  unit.cpp
src/Obsolete/: Detached_Cycles_Extractor.cpp  Read_CdBG_Constructor_Obsolete.cpp  Read_CdBG_Extractor_Obsolete.cpp  Read_CdBG_Obsolete.cpp
src/kmc_api/: Virtual_Prefix_File.cpp  kmc_file.cpp  kmer_api.cpp  mmer.cpp
src/lz4/: lz4.c  lz4frame.c  lz4hc.c
src/smhasher/: MurmurHash3.cpp
src/xxHash/: xxhash.c  xxhsum.c
